--- a/School/WebApplication1/Views/Home/Index.cshtml
+++ b/School/WebApplication1/Views/Home/Index.cshtml
@@ -1,80 +1,1 @@
-﻿@model List<KhachHangModel>  
-@* Razor *@
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
-        #customers {
-            font-family: Arial, Helvetica, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-            #customers td, #customers th {
-                border: 1px solid #ddd;
-                padding: 8px;
-            }
-
-            #customers tr:nth-child(even) {
-                background-color: #f2f2f2;
-            }
-
-            #customers tr:hover {
-                background-color: #ddd;
-            }
-
-            #customers th {
-                padding-top: 12px;
-                padding-bottom: 12px;
-                text-align: left;
-                background-color: #04AA6D;
-                color: white;
-            }
-    </style>
-</head>
-<body>
-
-    <h1>Khach Hang Table</h1>
-    <button>ADD</button>
-    <table id="customers">
-        <tr>
-            <th>ID</th>
-            <th>Ho Ten</th>
-            <th>Email</th>
-            <th>Mat Khau</th>
-            <th>Random Key</th>
-            <th>Dang Hoat Dong</th>
-            <th>Nhan Quang Cao</th>
-            <th>Edit</th>
-            <th>Delete</th>
-        </tr>
-        @{
-            foreach (var item in Model)
-            {
-                <tr>
-                    <td>@item.Id</td>
-                    <td>@item.HoTen</td>
-                    <td>@item.Email</td>
-                    <td>@item.MatKhau</td>
-                    <td>@item.RandomKey</td>
-                    <td>@item.DangHoatDong</td>
-                    <td>@item.NhanQuangCao</td>
-
-
-                    <td>
-                        <button>Edit</button>
-                    </td>
-                    <td>
-                        <button>Delete</button>
-                    </td>
-                </tr>
-            }
-        }
-
-
-    </table>
-
-</body>
-</html>
-
-
+﻿<a href="/Customer/Index">Customer</a>
