--- a/School/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/School/WebApplication1/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Khach Hang</a>
                         </li>*@
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Hang Hoa</a>
+                            <a class="nav-link text-dark" href="/HangHoa/Index">Hang Hoa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="DonHang" asp-action="DonHang">Don Hang</a>
+                            <a class="nav-link text-dark"  href="/DonHang/Index">Don Hang</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Chi Tiet Don Hang</a>
