--- a/School/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/School/WebApplication1/Views/Shared/_Layout.cshtml
@@ -19,19 +19,24 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         @*<li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Khach Hang</a>
-                        </li>*@
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Khach Hang</a>
+        </li>*@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/Loai/Index">Loai</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/KhachHang/Index">Khach Hang</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/HangHoa/Index">Hang Hoa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark"  href="/DonHang/Index">Don Hang</a>
+                            <a class="nav-link text-dark" href="/DonHang/Index">Don Hang</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Chi Tiet Don Hang</a>
-                        </li><li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Loai" asp-action="Loai">Loai</a>
+                            <a class="nav-link text-dark" href="/ChiTietDH/Index">Chi Tiet Don Hang</a>
                         </li>
+                        
 
                     </ul>
                 </div>
