--- a/School/WebApplication1/Views/ChiTietDH/Index.cshtml
+++ b/School/WebApplication1/Views/ChiTietDH/Index.cshtml
@@ -1,29 +1,29 @@
-﻿@model List<HangHoaModel>
+﻿@model List<ChiTietDHModel>
 @* Razor *@
 <!DOCTYPE html>
 <html>
 <head>
     <style>
-        #hanghoa {
+        #chitietdonhang {
             font-family: Arial, Helvetica, sans-serif;
             border-collapse: collapse;
             width: 100%;
         }
 
-            #hanghoa td, #hanghoa th {
+            #chitietdonhang td, #chitietdonhang th {
                 border: 1px solid #ddd;
                 padding: 8px;
             }
 
-            #hanghoa tr:nth-child(even) {
+            #chitietdonhang tr:nth-child(even) {
                 background-color: #f2f2f2;
             }
 
-            #hanghoa tr:hover {
+            #chitietdonhang tr:hover {
                 background-color: #ddd;
             }
 
-            #hanghoa th {
+            #chitietdonhang th {
                 padding-top: 12px;
                 padding-bottom: 12px;
                 text-align: left;
@@ -34,40 +34,38 @@
 </head>
 <body>
 
-    <h1>Hang Hoa Table</h1>
+    <h1>Chi Tiet Don Hang Table</h1>
     <button><a href="add">ADD</a></button>
-    <table id="hanghoa">
+    <table id="chitietdonhang">
         <tr>
             <th>ID</th>
-            <th>Ten HH</th>
-            <th>Ma Loai</th>
-            <th>So Luong</th>
+            <th>Created By</th>
+            <th>Created Date</th>
+            <th>Updated Date</th>
+            <th>Updated By</th>
+            <th>Is Deleted</th>
+            <th>Ma DH</th>
             <th>Don Gia</th>
-            <th>Giam Gia</th>
-            <th>Chi Tiet</th>
-            <th>Id Loai</th>
-            <th>Ten Loai</th>
+            <th>So Luong</th>
+  
             <th>Edit</th>
             <th>Delete</th>
-
-
-
-
-
         </tr>
         @{
             foreach (var item in Model)
             {
                 <tr>
                     <td>@item.Id</td>
-                    <td>@item.TenHH</td>
-                    <td>@item.MaLoai</td>
-                    <td>@item.SoLuong</td>
+                    <td>@item.CreatedBy</td>
+                    <td>@item.CreatedDate</td>
+                    <td>@item.UpdatedDate</td>
+                    <td>@item.UpdatedBy</td>
+                    <td>@item.IsDeleted</td>
+                    <td>@item.MaDH</td>
                     <td>@item.DonGia</td>
-                    <td>@item.GiamGia</td>
-                    <td>@item.ChiTiet</td>
-                    <td>@item.IdLoai</td>
-                    <td>@item.TenLoai</td>
+                    <td>@item.SoLuong</td>
+
+
 
                     <td>
                         <button>Edit</button>
