--- a/School/WebApplication1/Views/DonHang/Index.cshtml
+++ b/School/WebApplication1/Views/DonHang/Index.cshtml
@@ -1,1 +1,114 @@
-﻿<h1>Hello, this is DonHang</h1>
+﻿@model List<DonHangModel>
+@* Razor *@
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        #donhang {
+            font-family: Arial, Helvetica, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+            #donhang td, #donhang th {
+                border: 1px solid #ddd;
+                padding: 8px;
+            }
+
+            #donhang tr:nth-child(even) {
+                background-color: #f2f2f2;
+            }
+
+            #donhang tr:hover {
+                background-color: #ddd;
+            }
+
+            #donhang th {
+                padding-top: 12px;
+                padding-bottom: 12px;
+                text-align: left;
+                background-color: #04AA6D;
+                color: white;
+            }
+    </style>
+</head>
+<body>
+
+    @*<h1>Don Hang Table</h1>
+        <button><a href="add">ADD</a></button>
+        <table id="donhang">
+            <tr>
+                <th>ID</th>
+                <th>ID Khach Hang</th>
+                <th>Ten Khach Hang</th>
+                <th>Ngay Lap</th>
+                <th>Phi Van Chuyen</th>
+                <th>Thanh Tien</th>
+                <th>Tong Tien</th>
+                <th>Trang Thai Don Hang</th>
+                <th>Trang Thai Thanh Toan</th>
+
+                <th>Edit</th>
+                <th>Delete</th>
+            </tr>
+            @{
+                foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.Id</td>
+                        <td>@item.IdKhachHang</td>
+                        <td>@item.TenKhachHang</td>
+                        <td>@item.NgayLap</td>
+                        <td>@item.PhiVanChuyen</td>
+                        <td>@item.ThanhTien</td>
+                        <td>@item.TongTien</td>
+                        <td>@item.TrangThaiDonHang</td>
+                        <td>@item.TrangThaiThanhToan</td>
+
+
+                        <td>
+                            <button>Edit</button>
+                        </td>
+                        <td>
+                            <button>Delete</button>
+                        </td>
+                    </tr>
+                }
+            }
+        </table>*@
+
+    <h1>Don Hang Table 2</h1>
+    <button><a href="add">ADD</a></button>
+    <table id="donhang">
+        <tr>
+            <th>Ten Khach Hang</th>
+            <th>Email</th>
+
+
+            <th>Edit</th>
+            <th>Delete</th>
+        </tr>
+        @{
+            foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.TenKhachHang</td>
+                    <td>@item.</td>
+
+
+
+
+                    <td>
+                        <button>Edit</button>
+                    </td>
+                    <td>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+            }
+        }
+    </table>
+
+
+</body>
+</html>
