--- a/School/WebApplication1/Views/Home/Index.cshtml
+++ b/School/WebApplication1/Views/Home/Index.cshtml
@@ -1,1 +1,10 @@
-﻿<h1>HELLO WORLD</h1>
+﻿<style>
+    h1 {
+        text-align : center;
+        color : red
+    }
+       
+</style>
+
+
+<h1>Welcome</h1>
