--- a/School/WebApplication1/Views/KhachHang/Index.cshtml
+++ b/School/WebApplication1/Views/KhachHang/Index.cshtml
@@ -4,38 +4,238 @@
 <html>
 <head>
     <style>
-        #khachhang {
-            font-family: Arial, Helvetica, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
+
+
+        /*//////////////////////////////////////////////////////////////////
+        [ FONT ]*/
+
+        /*//////////////////////////////////////////////////////////////////
+        [ RESTYLE TAG ]*/
+        * {
+            margin: 0px;
+            padding: 0px;
+            box-sizing: border-box;
         }
 
-            #khachhang td, #khachhang th {
-                border: 1px solid #ddd;
-                padding: 8px;
+        body, html {
+            height: 100%;
+            font-family: sans-serif;
+        }
+
+        /* ------------------------------------ */
+        a {
+            margin: 0px;
+            transition: all 0.4s;
+            -webkit-transition: all 0.4s;
+            -o-transition: all 0.4s;
+            -moz-transition: all 0.4s;
+        }
+
+            a:focus {
+                outline: none !important;
             }
 
-            #khachhang tr:nth-child(even) {
-                background-color: #f2f2f2;
+            a:hover {
+                text-decoration: none;
             }
 
-            #khachhang tr:hover {
-                background-color: #ddd;
+        /* ------------------------------------ */
+        h1, h2, h3, h4, h5, h6 {
+            margin: 0px;
+        }
+
+        p {
+            margin: 0px;
+        }
+
+        ul, li {
+            margin: 0px;
+            list-style-type: none;
+        }
+
+
+        /* ------------------------------------ */
+        input {
+            display: block;
+            outline: none;
+            border: none !important;
+        }
+
+        textarea {
+            display: block;
+            outline: none;
+        }
+
+            textarea:focus, input:focus {
+                border-color: transparent !important;
             }
 
-            #khachhang th {
-                padding-top: 12px;
-                padding-bottom: 12px;
+        /* ------------------------------------ */
+        button {
+            outline: none !important;
+            border: none;
+            background: transparent;
+        }
+
+            button:hover {
+                cursor: pointer;
+            }
+
+        iframe {
+            border: none !important;
+        }
+
+
+
+
+        /*//////////////////////////////////////////////////////////////////
+        [ Utiliti ]*/
+
+
+
+
+
+
+        /*//////////////////////////////////////////////////////////////////
+        [ Table ]*/
+
+        .limiter {
+            width: 100%;
+            margin: 0 auto;
+        }
+
+        .container-table100 {
+            width: 100%;
+            min-height: 100vh;
+            background: #c850c0;
+            background: -webkit-linear-gradient(45deg, #4158d0, #c850c0);
+            background: -o-linear-gradient(45deg, #4158d0, #c850c0);
+            background: -moz-linear-gradient(45deg, #4158d0, #c850c0);
+            background: linear-gradient(45deg, #4158d0, #c850c0);
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -moz-box;
+            display: -ms-flexbox;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+            padding: 33px 30px;
+        }
+
+        .wrap-table100 {
+            width: 1170px;
+        }
+
+        table {
+            border-spacing: 1;
+            border-collapse: collapse;
+            background: white;
+            border-radius: 10px;
+            overflow: hidden;
+            width: 100%;
+            margin: 0 auto;
+            position: relative;
+        }
+
+            table * {
+                position: relative;
+            }
+
+            table td, table th {
+                padding-left: 8px;
+            }
+
+            table thead tr {
+                height: 60px;
+                background: #36304a;
+            }
+
+            table tbody tr {
+                height: 50px;
+            }
+
+                table tbody tr:last-child {
+                    border: 0;
+                }
+
+            table td, table th {
                 text-align: left;
-                background-color: #04AA6D;
-                color: white;
             }
+
+                table td.l, table th.l {
+                    text-align: right;
+                }
+
+                table td.c, table th.c {
+                    text-align: center;
+                }
+
+                table td.r, table th.r {
+                    text-align: center;
+                }
+
+
+        .table100-head th {
+            font-family: OpenSans-Regular;
+            font-size: 18px;
+            color: #fff;
+            line-height: 1.2;
+            font-weight: unset;
+        }
+
+        tbody tr:nth-child(even) {
+            background-color: #f5f5f5;
+        }
+
+        tbody tr {
+            font-family: OpenSans-Regular;
+            font-size: 15px;
+            color: #808080;
+            line-height: 1.2;
+            font-weight: unset;
+        }
+
+            tbody tr:hover {
+                color: #555555;
+                background-color: #f5f5f5;
+                cursor: pointer;
+            }
+
+        .column1 {
+            width: 260px;
+            padding-left: 40px;
+        }
+
+        .column2 {
+            width: 160px;
+        }
+
+        .column3 {
+            width: 245px;
+        }
+
+        .column4 {
+            width: 110px;
+            text-align: right;
+        }
+
+        .column5 {
+            width: 170px;
+            text-align: right;
+        }
+
+        .column6 {
+            width: 222px;
+            text-align: right;
+            padding-right: 62px;
+        }
     </style>
 </head>
 <body>
 
     <h1>Khach Hang Table</h1>
-    <button><a href="add">ADD</a></button>
+    <button><a href="/KhachHang/Add">ADD</a></button>
     <table id="khachhang">
         <tr>
             <th>ID</th>
@@ -62,16 +262,15 @@
 
 
                     <td>
-                        <button>Edit</button>
+                        <button><a href="/KhachHang/Edit/@item.Id">Edit</a></button>
                     </td>
                     <td>
-                        <button>Delete</button>
+                        <button><a href="/KhachHang/Delete/@item.Id">Delete</a></button>
+
                     </td>
                 </tr>
             }
         }
-
-
     </table>
 
 </body>
