[UPDATE] - Ghép UI UX

--- a/School/WebApplication1/Views/Home/View.cshtml
+++ b/School/WebApplication1/Views/Home/View.cshtml
@@ -1,4 +1,4 @@
-﻿@model StoreManagement.Models.KhachHangModel
+﻿@*@model StoreManagement.Models.KhachHangModel
 
 @{
     ViewData["Title"] = "View";
@@ -53,5 +53,5 @@
 
 <div>
     <a asp-action="Index">Back to List</a>
-</div>
+</div>*@
 
