--- a/School/WebApplication1/Views/Loai/Index.cshtml
+++ b/School/WebApplication1/Views/Loai/Index.cshtml
@@ -1,272 +1,194 @@
-﻿@using PagedList.Mvc;
-@using PagedList;
+﻿@model List<LoaiModel>
 
-@model IPagedList<LoaiModel>
-@* Razor *@
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
-
-
-                /*//////////////////////////////////////////////////////////////////
-        [ FONT ]*/
-
-                /*//////////////////////////////////////////////////////////////////
-        [ RESTYLE TAG ]*/
-                * {
-                    margin: 0px;
-                    padding: 0px;
-                    box-sizing: border-box;
-                }
-
-                body, html {
-                    height: 100%;
-                    font-family: sans-serif;
-                }
-
-                /* ------------------------------------ */
-                a {
-                    margin: 0px;
-                    transition: all 0.4s;
-                    -webkit-transition: all 0.4s;
-                    -o-transition: all 0.4s;
-                    -moz-transition: all 0.4s;
-                }
-
-                    a:focus {
-                        outline: none !important;
-                    }
-
-                    a:hover {
-                        text-decoration: none;
-                    }
-
-                /* ------------------------------------ */
-                h1, h2, h3, h4, h5, h6 {
-                    margin: 0px;
-                }
-
-                p {
-                    margin: 0px;
-                }
-
-                ul, li {
-                    margin: 0px;
-                    list-style-type: none;
-                }
-
-
-                /* ------------------------------------ */
-                input {
-                    display: block;
-                    outline: none;
-                    border: none !important;
-                }
-
-                textarea {
-                    display: block;
-                    outline: none;
-                }
-
-                    textarea:focus, input:focus {
-                        border-color: transparent !important;
-                    }
-
-                /* ------------------------------------ */
-                button {
-                    outline: none !important;
-                    border: none;
-                    background: transparent;
-                }
-
-                    button:hover {
-                        cursor: pointer;
-                    }
-
-                iframe {
-                    border: none !important;
-                }
-
-
-
-
-                /*//////////////////////////////////////////////////////////////////
-        [ Utiliti ]*/
-
-
-
-
-
-
-                /*//////////////////////////////////////////////////////////////////
-        [ Table ]*/
-
-                .limiter {
-                    width: 100%;
-                    margin: 0 auto;
-                }
-
-                .container-table100 {
-                    width: 100%;
-                    min-height: 100vh;
-                    background: #c850c0;
-                    background: -webkit-linear-gradient(45deg, #4158d0, #c850c0);
-                    background: -o-linear-gradient(45deg, #4158d0, #c850c0);
-                    background: -moz-linear-gradient(45deg, #4158d0, #c850c0);
-                    background: linear-gradient(45deg, #4158d0, #c850c0);
-                    display: -webkit-box;
-                    display: -webkit-flex;
-                    display: -moz-box;
-                    display: -ms-flexbox;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    flex-wrap: wrap;
-                    padding: 33px 30px;
-                }
-
-                .wrap-table100 {
-                    width: 1170px;
-                }
-
-                table {
-                    border-spacing: 1;
-                    border-collapse: collapse;
-                    background: white;
-                    border-radius: 10px;
-                    overflow: hidden;
-                    width: 100%;
-                    margin: 0 auto;
-                    position: relative;
-                }
-
-                    table * {
-                        position: relative;
-                    }
-
-                    table td, table th {
-                        padding-left: 8px;
-                    }
-
-                    table thead tr {
-                        height: 60px;
-                        background: #36304a;
-                    }
-
-                    table tbody tr {
-                        height: 50px;
-                    }
-
-                        table tbody tr:last-child {
-                            border: 0;
-                        }
-
-                    table td, table th {
-                        text-align: left;
-                    }
-
-                        table td.l, table th.l {
-                            text-align: right;
-                        }
-
-                        table td.c, table th.c {
-                            text-align: center;
-                        }
-
-                        table td.r, table th.r {
-                            text-align: center;
-                        }
-
-
-                .table100-head th {
-                    font-family: OpenSans-Regular;
-                    font-size: 18px;
-                    color: #fff;
-                    line-height: 1.2;
-                    font-weight: unset;
-                }
-
-                tbody tr:nth-child(even) {
-                    background-color: #f5f5f5;
-                }
-
-                tbody tr {
-                    font-family: OpenSans-Regular;
-                    font-size: 15px;
-                    color: #808080;
-                    line-height: 1.2;
-                    font-weight: unset;
-                }
-
-                    tbody tr:hover {
-                        color: #555555;
-                        background-color: #f5f5f5;
-                        cursor: pointer;
-                    }
-
-                .column1 {
-                    width: 260px;
-                    padding-left: 40px;
-                }
-
-                .column2 {
-                    width: 160px;
-                }
-
-                .column3 {
-                    width: 245px;
-                }
-
-                .column4 {
-                    width: 110px;
-                    text-align: right;
-                }
-
-                .column5 {
-                    width: 170px;
-                    text-align: right;
-                }
-
-                .column6 {
-                    width: 222px;
-                    text-align: right;
-                    padding-right: 62px;
-                }
-    </style>
-</head>
-<body>
-
-    <h1>Loai Table</h1>
-    <button><a href="/Loai/Add">ADD</a></button>
-    <table id="type">
-        <tr>
-            <th>ID</th>
-            <th>Ten Loai</th>
-            <th>Mo Ta</th>
-            <th>Ma Loai Cha</th>
-            <th>Edit</th>
-            <th>Delete</th>
-        </tr>
-        @{
-            foreach (var item in Model)
-            {
-                <tr>
-                    <td>@item.Id</td>
-                    <td>@item.TenLoai</td>
-                    <td>@item.Mota</td>
-                    <td>@item.MaLoaiCha</td>
-
-                    <td>
-                        <button><a href="/Loai/Edit/@item.Id">Edit</a></button>
-                    </td>
-                    <td>
-                        <button><a href="/Loai/Delete/@item.Id">Delete</a></button>
-                    </td>
-                </tr>
-            }
-        }
-    </table>
-</body>
-@*@Html.RenderPartial("/Loai/Index"));*@
-</html>
+@{
+    ViewData["Title"] = "Loại";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}  <div class="content">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card card-user">
+                <div class="image">
+                    <img src="../assets/img/damir-bosnjak.jpg" alt="...">
+                </div>
+                <div class="card-body">
+                    <div class="author">
+                        <a href="#">
+                            <img class="avatar border-gray" src="../assets/img/mike.jpg" alt="...">
+                            <h5 class="title">Chet Faker</h5>
+                        </a>
+                        <p class="description">
+                            I wanna bag it up"
+                        </p>
+                    </div>
+                    <p class="description text-center">
+                        "I like the way you work it <br>
+                        No diggity <br>
+                        I wanna bag it up"
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <hr>
+                    <div class="button-container">
+                        <div class="row">
+                            <div class="col-lg-3 col-md-6 col-6 ml-auto">
+                                <h5>12<br><small>Files</small></h5>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-6 ml-auto mr-auto">
+                                <h5>2GB<br><small>Used</small></h5>
+                            </div>
+                            <div class="col-lg-3 mr-auto">
+                                <h5>24,6$<br><small>Spent</small></h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="card-title">Team Members</h4>
+                </div>
+                <div class="card-body">
+                    <ul class="list-unstyled team-members">
+                        <li>
+                            <div class="row">
+                                <div class="col-md-2 col-2">
+                                    <div class="avatar">
+                                        <img src="../assets/img/faces/ayo-ogunseinde-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                                    </div>
+                                </div>
+                                <div class="col-md-7 col-7">
+                                    DJ Khaled
+                                    <br />
+                                    <span class="text-muted"><small>Offline</small></span>
+                                </div>
+                                <div class="col-md-3 col-3 text-right">
+                                    <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="row">
+                                <div class="col-md-2 col-2">
+                                    <div class="avatar">
+                                        <img src="../assets/img/faces/joe-gardner-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                                    </div>
+                                </div>
+                                <div class="col-md-7 col-7">
+                                    Creative Tim
+                                    <br />
+                                    <span class="text-success"><small>Available</small></span>
+                                </div>
+                                <div class="col-md-3 col-3 text-right">
+                                    <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="row">
+                                <div class="col-md-2 col-2">
+                                    <div class="avatar">
+                                        <img src="../assets/img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                                    </div>
+                                </div>
+                                <div class="col-ms-7 col-7">
+                                    Flume
+                                    <br />
+                                    <span class="text-danger"><small>Busy</small></span>
+                                </div>
+                                <div class="col-md-3 col-3 text-right">
+                                    <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div class="card card-user">
+                <div class="card-header">
+                    <h5 class="card-title">Edit Profile</h5>
+                </div>
+                <div class="card-body">
+                    <form>
+                        <div class="row">
+                            <div class="col-md-5 pr-1">
+                                <div class="form-group">
+                                    <label>Company (disabled)</label>
+                                    <input type="text" class="form-control" disabled="" placeholder="Company" value="Creative Code Inc.">
+                                </div>
+                            </div>
+                            <div class="col-md-3 px-1">
+                                <div class="form-group">
+                                    <label>Username</label>
+                                    <input type="text" class="form-control" placeholder="Username" value="michael23">
+                                </div>
+                            </div>
+                            <div class="col-md-4 pl-1">
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1">Email address</label>
+                                    <input type="email" class="form-control" placeholder="Email">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 pr-1">
+                                <div class="form-group">
+                                    <label>First Name</label>
+                                    <input type="text" class="form-control" placeholder="Company" value="Chet">
+                                </div>
+                            </div>
+                            <div class="col-md-6 pl-1">
+                                <div class="form-group">
+                                    <label>Last Name</label>
+                                    <input type="text" class="form-control" placeholder="Last Name" value="Faker">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label>Address</label>
+                                    <input type="text" class="form-control" placeholder="Home Address" value="Melbourne, Australia">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 pr-1">
+                                <div class="form-group">
+                                    <label>City</label>
+                                    <input type="text" class="form-control" placeholder="City" value="Melbourne">
+                                </div>
+                            </div>
+                            <div class="col-md-4 px-1">
+                                <div class="form-group">
+                                    <label>Country</label>
+                                    <input type="text" class="form-control" placeholder="Country" value="Australia">
+                                </div>
+                            </div>
+                            <div class="col-md-4 pl-1">
+                                <div class="form-group">
+                                    <label>Postal Code</label>
+                                    <input type="number" class="form-control" placeholder="ZIP Code">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label>About Me</label>
+                                    <textarea class="form-control textarea">Oh so, your weak rhyme You doubt I'll bother, reading into it</textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="update ml-auto mr-auto">
+                                <button type="submit" class="btn btn-primary btn-round">Update Profile</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
