--- a/School/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/School/WebApplication1/Views/Shared/_Layout.cshtml
@@ -3,59 +3,60 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Store</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <title>Store Management</title>
+    @* libs theme *@
+
+    <!--     Fonts and icons     -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <!-- CSS Files -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/paper-dashboard.css?v=2.0.1" rel="stylesheet" />
+    <!-- CSS Just for demo purpose, don't include it in your project -->
+    <link href="assets/demo/demo.css" rel="stylesheet" />
+    <link href="~/css/app-style.css" rel="stylesheet" />
+    @* end libs theme *@
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-action="Index">Store</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/Loai/Index">Loai</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/KhachHang/Index">Khach Hang</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/HangHoa/Index">Hang Hoa</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/DonHang/Index">Don Hang</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/ChiTietDH/Index">Chi Tiet DH</a>
-                        </li>
-                    </ul>
+<body class="">
 
-                </div>
+    @*@Html.Partial("_Navbar")*@
+
+    <div class="wrapper">
+        @await Html.PartialAsync("_Navbar")
+        <div class="main-panel">
+
+            <div class="content" style="margin-top: 60px">
+
+                @RenderBody()
+
             </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-
-            @RenderBody()
-
-
-        </main>
+            @await Html.PartialAsync("_Footer")
+        </div>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-          
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
+    @*@Html.Partial("_Footer")*@
+
+    @* libs theme *@
+    <!--   Core JS Files   -->
+    <script src="assets/js/core/jquery.min.js"></script>
+    <script src="assets/js/core/popper.min.js"></script>
+    <script src="assets/js/core/bootstrap.min.js"></script>
+    <script src="assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+    <!--  Google Maps Plugin    -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+    <!-- Chart JS -->
+    <script src="assets/js/plugins/chartjs.min.js"></script>
+    <!--  Notifications Plugin    -->
+    <script src="assets/js/plugins/bootstrap-notify.js"></script>
+    <!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
+    <script src="assets/js/paper-dashboard.min.js?v=2.0.1" type="text/javascript"></script><!-- Paper Dashboard DEMO methods, don't include it in your project! -->
+    <script src="assets/demo/demo.js"></script>
+    <script>
+        $(document).ready(function () {
+            // Javascript method's body can be found in assets/assets-for-demo/js/demo.js
+            demo.initChartsPages();
+        });
+    </script>
+    @* libs theme *@
 </body>
 </html>
