--- a/School/WebApplication1/Views/ChiTietDH/Edit.cshtml
+++ b/School/WebApplication1/Views/ChiTietDH/Edit.cshtml
@@ -1,83 +1,188 @@
-﻿@model StoreManagement.Models.ChiTietDHModel
+﻿<head>
+    <title>Chi Tiết Đơn Hàng Edit</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+    <style>
+        html, body {
+            min-height: 100%;
+        }
 
-@{
-    Layout = null;
-}
+        body, div, form, input, select, p {
+            padding: 0;
+            margin: 0;
+            outline: none;
+            font-family: Roboto, Arial, sans-serif;
+            font-size: 14px;
+            color: #666;
+        }
 
-<!DOCTYPE html>
+        h1 {
+            margin: 0;
+            font-weight: 400;
+        }
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
+        h3 {
+            margin: 12px 0;
+            color: #8ebf42;
+        }
+
+        .main-block {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: #fff;
+        }
+
+        form {
+            width: 100%;
+            padding: 20px;
+        }
+
+        fieldset {
+            border: none;
+            border-top: 1px solid #8ebf42;
+        }
+
+        .account-details, .personal-details {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+
+            .account-details > div, .personal-details > div > div {
+                display: flex;
+                align-items: center;
+                margin-bottom: 10px;
+            }
+
+            .account-details > div, .personal-details > div, input, label {
+                width: 100%;
+            }
+
+        label {
+            padding: 0 5px;
+            text-align: right;
+            vertical-align: middle;
+        }
+
+        input {
+            padding: 5px;
+            vertical-align: middle;
+        }
+
+        .checkbox {
+            margin-bottom: 10px;
+        }
+
+        select, .children, .gender, .bdate-block {
+            width: calc(100% + 26px);
+            padding: 5px 0;
+        }
+
+        select {
+            background: transparent;
+        }
+
+        .gender input {
+            width: auto;
+        }
+
+        .gender label {
+            padding: 0 5px 0 0;
+        }
+
+        .bdate-block {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .birthdate select.day {
+            width: 45px;
+        }
+
+        .birthdate select.mounth {
+            width: calc(100% - 94px);
+        }
+
+        .birthdate input {
+            width: 38px;
+            vertical-align: unset;
+        }
+
+        .checkbox input, .children input {
+            width: auto;
+            margin: -2px 10px 0 0;
+        }
+
+        .checkbox a {
+            color: #8ebf42;
+        }
+
+            .checkbox a:hover {
+                color: #82b534;
+            }
+
+        button {
+            width: 100%;
+            padding: 10px 0;
+            margin: 10px auto;
+            border-radius: 5px;
+            border: none;
+            background: #8ebf42;
+            font-size: 14px;
+            font-weight: 600;
+            color: #fff;
+        }
+
+        a {
+            width: 100%;
+            padding: 5px 0;
+            margin: 10px auto;
+            border-radius: 5px;
+            border: none;
+            background: #8ebf42;
+            font-size: 15px;
+            font-weight: 600;
+            color: #fff;
+            text-decoration: none;
+        }
+
+        button:hover {
+            background: #82b534;
+        }
+    </style>
 </head>
 <body>
+    <div class="main-block">
+        <form action="/">
+            <h1>Chi Tiết Đơn Hàng Edit</h1>
 
-<h4>ChiTietDHModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="DoEdit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="MaDH" class="control-label"></label>
-                <input asp-for="MaDH" class="form-control" />
-                <span asp-validation-for="MaDH" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MaHH" class="control-label"></label>
-                <input asp-for="MaHH" class="form-control" />
-                <span asp-validation-for="MaHH" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DonGia" class="control-label"></label>
-                <input asp-for="DonGia" class="form-control" />
-                <span asp-validation-for="DonGia" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SoLuong" class="control-label"></label>
-                <input asp-for="SoLuong" class="form-control" />
-                <span asp-validation-for="SoLuong" class="text-danger"></span>
-            </div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="CreatedBy" class="control-label"></label>
-                <input asp-for="CreatedBy" class="form-control" />
-                <span asp-validation-for="CreatedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdatedDate" class="control-label"></label>
-                <input asp-for="UpdatedDate" class="form-control" />
-                <span asp-validation-for="UpdatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdatedBy" class="control-label"></label>
-                <input asp-for="UpdatedBy" class="form-control" />
-                <span asp-validation-for="UpdatedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsDeleted" /> @Html.DisplayNameFor(model => model.IsDeleted)
-                </label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
+            <fieldset>
+                <legend>
+                    <h3>Sửa Chi Tiết Đơn Hàng</h3>
+                </legend>
+                <div class="personal-details">
+                    <div>
+                        <div><label>Id*</label><input type="text" name="name" required></div>
+                        <div><label>Created By*</label><input type="text" name="name" required></div>
+                        <div><label>Created Date</label><input type="text" name="name"></div>
+                        <div><label>Updated Date*</label><input type="text" name="name" required></div>
+                        <div><label>Updated By*</label><input type="text" name="name" required></div>
+                        <div><label>Is Deleted*</label><input type="text" name="name" required></div>
+                        <div><label>Mã Đơn Hàng*</label><input type="text" name="name" required></div>
+                        <div><label>Đơn Giá*</label><input type="text" name="name" required></div>
+                        <div><label>Số Lượng*</label><input type="text" name="name" required></div>
+                        
+
+
+                    </div>
+                  </div>
+            </fieldset>
+            <button href="/">Submit</button>
+
+            <a asp-action="Index">Back to List</a>
+
+
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
 </body>
-</html>
