--- a/School/WebApplication1/Views/ChiTietDH/Index.cshtml
+++ b/School/WebApplication1/Views/ChiTietDH/Index.cshtml
@@ -1,286 +1,91 @@
-﻿@model List<ChiTietDHModel>
-@* Razor *@
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
+﻿
+
+@model List<ChiTietDHModel>
+@{
+    ViewData["Title"] = "Chi Tiết Đơn Hàng";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">Chi Tiết Đơn Hàng</h4>
+            </div>
+
+            <button style="padding: 10px 10px; background: yellow "><a href="/ChiTietDH/Add/">Add</a></button>
+
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead class=" text-primary">
+                        <th>
+                            Id
+                        </th>
+                        <th>
+                            Created By
+                        </th>
+                        <th>
+                            Created Date
+                        </th>
+                        <th>
+                            Updated Date
+                        </th>
+                        <th>
+                            Updated By
+                        </th>
+                        <th>
+                            Is Deleted
+                        </th>
+                        <th>
+                            Mã Đơn Hàng
+                        </th>
+                        <th>
+                            Đơn Giá
+                        </th>
+                        <th>
+                            Số Lượng
+                        </th>
+                        <th>
+                            Edit
+                        </th>
+                        <th>
+                            Delete
+                        </th>
+
+                        </thead>
+                        <tbody>
+                            @*@await Html.PartialAsync("Pagination")*@
+
+                            @{
+                                foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>@item.Id</td>
+                                        <td>@item.CreatedBy</td>
+                                        <td>@item.CreatedDate</td>
+                                        <td>@item.UpdatedDate</td>
+                                        <td>@item.UpdatedBy</td>
+                                        <td>@item.IsDeleted</td>
+                                        <td>@item.MaDH</td>
+                                        <td>@item.DonGia</td>
+                                        <td>@item.SoLuong</td>
 
 
-        /*//////////////////////////////////////////////////////////////////
-        [ FONT ]*/
+                                        <td>
+                                            <button style="background: yellow"><a href="/ChiTietDH/Edit/@item.Id">Edit</a></button>
+                                        </td>
+                                        <td>
+                                            <button style="background: yellow"><a href="/ChiTietDH/Delete/@item.Id">Delete</a></button>
+                                        </td>
+                                    </tr>
+                                }
+                            }
+                        </tbody>
+                    </table>
+                    @await Html.PartialAsync("Pagination")
 
-        /*//////////////////////////////////////////////////////////////////
-        [ RESTYLE TAG ]*/
-        * {
-            margin: 0px;
-            padding: 0px;
-            box-sizing: border-box;
-        }
-
-        body, html {
-            height: 100%;
-            font-family: sans-serif;
-        }
-
-        /* ------------------------------------ */
-        a {
-            margin: 0px;
-            transition: all 0.4s;
-            -webkit-transition: all 0.4s;
-            -o-transition: all 0.4s;
-            -moz-transition: all 0.4s;
-        }
-
-            a:focus {
-                outline: none !important;
-            }
-
-            a:hover {
-                text-decoration: none;
-            }
-
-        /* ------------------------------------ */
-        h1, h2, h3, h4, h5, h6 {
-            margin: 0px;
-        }
-
-        p {
-            margin: 0px;
-        }
-
-        ul, li {
-            margin: 0px;
-            list-style-type: none;
-        }
-
-
-        /* ------------------------------------ */
-        input {
-            display: block;
-            outline: none;
-            border: none !important;
-        }
-
-        textarea {
-            display: block;
-            outline: none;
-        }
-
-            textarea:focus, input:focus {
-                border-color: transparent !important;
-            }
-
-        /* ------------------------------------ */
-        button {
-            outline: none !important;
-            border: none;
-            background: transparent;
-        }
-
-            button:hover {
-                cursor: pointer;
-            }
-
-        iframe {
-            border: none !important;
-        }
-
-
-
-
-        /*//////////////////////////////////////////////////////////////////
-        [ Utiliti ]*/
-
-
-
-
-
-
-        /*//////////////////////////////////////////////////////////////////
-        [ Table ]*/
-
-        .limiter {
-            width: 100%;
-            margin: 0 auto;
-        }
-
-        .container-table100 {
-            width: 100%;
-            min-height: 100vh;
-            background: #c850c0;
-            background: -webkit-linear-gradient(45deg, #4158d0, #c850c0);
-            background: -o-linear-gradient(45deg, #4158d0, #c850c0);
-            background: -moz-linear-gradient(45deg, #4158d0, #c850c0);
-            background: linear-gradient(45deg, #4158d0, #c850c0);
-            display: -webkit-box;
-            display: -webkit-flex;
-            display: -moz-box;
-            display: -ms-flexbox;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-wrap: wrap;
-            padding: 33px 30px;
-        }
-
-        .wrap-table100 {
-            width: 1170px;
-        }
-
-        table {
-            border-spacing: 1;
-            border-collapse: collapse;
-            background: white;
-            border-radius: 10px;
-            overflow: hidden;
-            width: 100%;
-            margin: 0 auto;
-            position: relative;
-        }
-
-            table * {
-                position: relative;
-            }
-
-            table td, table th {
-                padding-left: 8px;
-            }
-
-            table thead tr {
-                height: 60px;
-                background: #36304a;
-            }
-
-            table tbody tr {
-                height: 50px;
-            }
-
-                table tbody tr:last-child {
-                    border: 0;
-                }
-
-            table td, table th {
-                text-align: left;
-            }
-
-                table td.l, table th.l {
-                    text-align: right;
-                }
-
-                table td.c, table th.c {
-                    text-align: center;
-                }
-
-                table td.r, table th.r {
-                    text-align: center;
-                }
-
-
-        .table100-head th {
-            font-family: OpenSans-Regular;
-            font-size: 18px;
-            color: #fff;
-            line-height: 1.2;
-            font-weight: unset;
-        }
-
-        tbody tr:nth-child(even) {
-            background-color: #f5f5f5;
-        }
-
-        tbody tr {
-            font-family: OpenSans-Regular;
-            font-size: 15px;
-            color: #808080;
-            line-height: 1.2;
-            font-weight: unset;
-        }
-
-            tbody tr:hover {
-                color: #555555;
-                background-color: #f5f5f5;
-                cursor: pointer;
-            }
-
-        .column1 {
-            width: 260px;
-            padding-left: 40px;
-        }
-
-        .column2 {
-            width: 160px;
-        }
-
-        .column3 {
-            width: 245px;
-        }
-
-        .column4 {
-            width: 110px;
-            text-align: right;
-        }
-
-        .column5 {
-            width: 170px;
-            text-align: right;
-        }
-
-        .column6 {
-            width: 222px;
-            text-align: right;
-            padding-right: 62px;
-        }
-    </style>
-</head>
-<body>
-
-    <h1>Chi Tiet Don Hang Table</h1>
-    <button><a href="add">ADD</a></button>
-    <button><a href="/DonHang/details">Xem Them</a></button>
-
-    <table id="chitietdonhang">
-        <tr>
-            <th>ID</th>
-            <th>Created By</th>
-            <th>Created Date</th>
-            <th>Updated Date</th>
-            <th>Updated By</th>
-            <th>Is Deleted</th>
-            <th>Ma DH</th>
-            <th>Don Gia</th>
-            <th>So Luong</th>
-
-            <th>Edit</th>
-            <th>Delete</th>
-        </tr>
-        @{
-            foreach (var item in Model)
-            {
-                <tr>
-                    <td>@item.Id</td>
-                    <td>@item.CreatedBy</td>
-                    <td>@item.CreatedDate</td>
-                    <td>@item.UpdatedDate</td>
-                    <td>@item.UpdatedBy</td>
-                    <td>@item.IsDeleted</td>
-                    <td>@item.MaDH</td>
-                    <td>@item.DonGia</td>
-                    <td>@item.SoLuong</td>
-
-
-
-                    <td>
-                        <button><a href="/ChiTietDH/Edit/@item.Id">Edit</a></button>
-                    </td>
-                    <td>
-                        <button><a href="/ChiTietDH/Delete/@item.Id">Delete</a></button>
-                    </td>
-                </tr>
-            }
-        }
-
-
-    </table>
-
-</body>
-</html>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
