--- a/School/WebApplication1/Views/DonHang/Index.cshtml
+++ b/School/WebApplication1/Views/DonHang/Index.cshtml
@@ -1,328 +1,78 @@
-﻿@model List<StoreManagement.Dtos.DonHangDto>
-@* Razor *@
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
+﻿@model List<DonHangModel>
+@{
+    ViewData["Title"] = "Đơn Hàng";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">Đơn Hàng</h4>
+            </div>
 
+            <button style="padding: 10px 10px; background: yellow "><a href="/DonHang/Add/">Add</a></button>
 
-        /*//////////////////////////////////////////////////////////////////
-        [ FONT ]*/
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead class=" text-primary">
+                        <th>
+                            Id
+                        </th>
+                        <th>
+                            Ngày Lập
+                        </th>
+                        <th>
+                            Phí Vận Chuyển
+                        </th>
+                        <th>
+                            Thành Tiền
+                        </th>
+                        <th>
+                            Tổng Tiền
+                        </th>
+                        <th>
+                            Trạng Thái Đơn Hàng
+                        </th>
+                        <th>
+                            Trạng Thái Thanh Toán
+                        </th>
+                        <th>
+                            Edit
+                        </th>
+                        <th>
+                            Delete
+                        </th>
 
-        /*//////////////////////////////////////////////////////////////////
-        [ RESTYLE TAG ]*/
-        * {
-            margin: 0px;
-            padding: 0px;
-            box-sizing: border-box;
-        }
-
-        body, html {
-            height: 100%;
-            font-family: sans-serif;
-        }
-
-        /* ------------------------------------ */
-        a {
-            margin: 0px;
-            transition: all 0.4s;
-            -webkit-transition: all 0.4s;
-            -o-transition: all 0.4s;
-            -moz-transition: all 0.4s;
-        }
-
-            a:focus {
-                outline: none !important;
-            }
-
-            a:hover {
-                text-decoration: none;
-            }
-
-        /* ------------------------------------ */
-        h1, h2, h3, h4, h5, h6 {
-            margin: 0px;
-        }
-
-        p {
-            margin: 0px;
-        }
-
-        ul, li {
-            margin: 0px;
-            list-style-type: none;
-        }
-
-
-        /* ------------------------------------ */
-        input {
-            display: block;
-            outline: none;
-            border: none !important;
-        }
-
-        textarea {
-            display: block;
-            outline: none;
-        }
-
-            textarea:focus, input:focus {
-                border-color: transparent !important;
-            }
-
-        /* ------------------------------------ */
-        button {
-            outline: none !important;
-            border: none;
-            background: transparent;
-        }
-
-            button:hover {
-                cursor: pointer;
-            }
-
-        iframe {
-            border: none !important;
-        }
-
-
-
-
-        /*//////////////////////////////////////////////////////////////////
-        [ Utiliti ]*/
-
-
-
-
-
-
-        /*//////////////////////////////////////////////////////////////////
-        [ Table ]*/
-
-        .limiter {
-            width: 100%;
-            margin: 0 auto;
-        }
-
-        .container-table100 {
-            width: 100%;
-            min-height: 100vh;
-            background: #c850c0;
-            background: -webkit-linear-gradient(45deg, #4158d0, #c850c0);
-            background: -o-linear-gradient(45deg, #4158d0, #c850c0);
-            background: -moz-linear-gradient(45deg, #4158d0, #c850c0);
-            background: linear-gradient(45deg, #4158d0, #c850c0);
-            display: -webkit-box;
-            display: -webkit-flex;
-            display: -moz-box;
-            display: -ms-flexbox;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-wrap: wrap;
-            padding: 33px 30px;
-        }
-
-        .wrap-table100 {
-            width: 1170px;
-        }
-
-        table {
-            border-spacing: 1;
-            border-collapse: collapse;
-            background: white;
-            border-radius: 10px;
-            overflow: hidden;
-            width: 100%;
-            margin: 0 auto;
-            position: relative;
-        }
-
-            table * {
-                position: relative;
-            }
-
-            table td, table th {
-                padding-left: 8px;
-            }
-
-            table thead tr {
-                height: 60px;
-                background: #36304a;
-            }
-
-            table tbody tr {
-                height: 50px;
-            }
-
-                table tbody tr:last-child {
-                    border: 0;
-                }
-
-            table td, table th {
-                text-align: left;
-            }
-
-                table td.l, table th.l {
-                    text-align: right;
-                }
-
-                table td.c, table th.c {
-                    text-align: center;
-                }
-
-                table td.r, table th.r {
-                    text-align: center;
-                }
-
-
-        .table100-head th {
-            font-family: OpenSans-Regular;
-            font-size: 18px;
-            color: #fff;
-            line-height: 1.2;
-            font-weight: unset;
-        }
-
-        tbody tr:nth-child(even) {
-            background-color: #f5f5f5;
-        }
-
-        tbody tr {
-            font-family: OpenSans-Regular;
-            font-size: 15px;
-            color: #808080;
-            line-height: 1.2;
-            font-weight: unset;
-        }
-
-            tbody tr:hover {
-                color: #555555;
-                background-color: #f5f5f5;
-                cursor: pointer;
-            }
-
-        .column1 {
-            width: 260px;
-            padding-left: 40px;
-        }
-
-        .column2 {
-            width: 160px;
-        }
-
-        .column3 {
-            width: 245px;
-        }
-
-        .column4 {
-            width: 110px;
-            text-align: right;
-        }
-
-        .column5 {
-            width: 170px;
-            text-align: right;
-        }
-
-        .column6 {
-            width: 222px;
-            text-align: right;
-            padding-right: 62px;
-        }
-    </style>
-</head>
-<body>
-
-    <h1>Don Hang Table</h1>
-    <button><a href="add">ADD</a></button>
-    <button><a href="/DonHang/details">Xem Them</a></button>
-
-    <table id="donhang">
-        <tr>
-            @*<th>Ten Khach Hang</th>
-                <th>Ngay Lap</th>*@
-            <th>Id</th>
-            <th>Phi Van Chuyen</th>
-            <th>Thanh Tien</th>
-            <th>Tong Tien</th>
-            <th>Trang Thai Don Hang</th>
-            <th>Trang Thai Thanh Toan</th>
-            <th>Hang Hoa</th>
-
-            <th>Edit</th>
-            <th>Delete</th>
-        </tr>
-        @{
-            foreach (var item in Model)
-            {
-                <tr>
-                    <td>@item.Id</td>
-                    <td>@item.PhiVanChuyen</td>
-                    <td>@item.ThanhTien</td>
-                    <td>@item.TongTien</td>
-                    <td>@item.TrangThaiDonHang</td>
-                    <td>@item.TrangThaiThanhToan</td>
-
-                    <td>
-                        <table>
+                        </thead>
+                        @*@await Html.PartialAsync("Pagination")*@
+                        <tbody>
                             @{
-
-                                foreach (var hanghoa in item.HangHoaDtos)
+                                foreach (var item in Model)
                                 {
                                     <tr>
-                                        <td>@hanghoa.TenHH</td>
+                                        <td>@item.Id</td>
+                                        <td>@item.NgayLap</td>
+                                        <td>@item.PhiVanChuyen</td>
+                                        <td>@item.ThanhTien</td>
+                                        <td>@item.TongTien</td>
+                                        <td>@item.TrangThaiDonHang</td>
+                                        <td>@item.TrangThaiThanhToan</td>
+
+                                        <td>
+                                            <button style="background: yellow"><a href="/DonHang/Edit/@item.Id">Edit</a></button>
+                                        </td>
+                                        <td>
+                                            <button style="background: yellow"><a href="/DonHang/Delete/@item.Id">Delete</a></button>
+                                        </td>
                                     </tr>
                                 }
                             }
-
-                        </table>
-                    </td>
-
-
-                    <td>
-                        <button><a href="/DonHang/Edit/@item.Id">Edit</a></button>
-                    </td>
-                    <td>
-                        <button><a href="/DonHang/Delete/@item.Id">Delete</a></button>
-                    </td>
-                </tr>
-            }
-        }
-    </table>
-
-    @*<h1>Don Hang Table 2</h1>
-        <button><a href="add">ADD</a></button>
-        <table id="donhang">
-            <tr>
-                <th>Ten Khach Hang</th>
-                <th>Email</th>
-                <th>Phi Van Chuyen</th>
-                <th>Tong Tien</th>
-
-
-                <th>Edit</th>
-                <th>Delete</th>
-            </tr>
-            @{
-                foreach (var item in Model)
-                {
-                    <tr>
-                        <td>@item.TenKhachHang</td>
-                        <td>@item.Email</td>
-                        <td>@item.PhiVanChuyen</td>
-                        <td>@item.TongTien</td>
-                        <td>
-                            <button>Edit</button>
-                        </td>
-                        <td>
-                            <button>Delete</button>
-                        </td>
-                    </tr>
-                }
-            }
-        </table>*@
-
-
-</body>
-</html>
+                        </tbody>
+                    </table>
+                    @await Html.PartialAsync("Pagination")
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
