--- a/School/WebApplication1/Views/KhachHang/Index.cshtml
+++ b/School/WebApplication1/Views/KhachHang/Index.cshtml
@@ -1,57 +1,83 @@
-﻿
+﻿@model List<KhachHangModel>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Khách hàng";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+    Pager pager = new Pager();
+
+    int pageNo = 0;
+    if (ViewBag.Pager != null)
+    {
+        pager = ViewBag.Pager;
+        pageNo = pager.CurrentPage;
+    }
 }
+
 <div class="row">
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
                 <h4 class="card-title">Khách hàng</h4>
             </div>
+            <button style="padding: 10px 10px; background: yellow "><a href="/KhachHang/Add/">Add</a></button>
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table">
                         <thead class=" text-primary">
                         <th>
-                            Name
+                            Id
                         </th>
                         <th>
-                            Country
+                            Tên Khách Hàng
                         </th>
                         <th>
-                            City
+                            Email
                         </th>
-                        <th class="text-right">
-                            Salary
+                        <th>
+                            Mật Khẩu
                         </th>
-                        </thead>
-                        <tbody>
-                            @{
-                                for (int a = 0; a < 100; a++)
-                                {
+                        <th>
+                            RandomKey
+                        </th>
+                        <th>
+                            Edit
+                        </th>
+                        <th>
+                            Delete
+                        </th>
 
+                        </thead>
+
+                        <tbody>
+                            @*@await Html.PartialAsync("Pagination")*@
+
+                            @{
+                                foreach (var item in Model)
+                                {
                                     <tr>
+                                        <td>@item.Id</td>
+                                        <td>@item.HoTen</td>
+                                        <td>@item.Email</td>
+                                        <td>@item.MatKhau</td>
+                                        <td>@item.RandomKey</td>
+
                                         <td>
-                                            Jon Porter
+                                            <button style="background: yellow"><a href="/KhachHang/Edit/@item.Id">Edit</a></button>
                                         </td>
                                         <td>
-                                            Portugal
-                                        </td>
-                                        <td>
-                                            Gloucester
-                                        </td>
-                                        <td class="text-right">
-                                            $98,615
+                                            <button style="background: yellow"><a href="/KhachHang/Delete/@item.Id">Delete</a></button>
                                         </td>
                                     </tr>
                                 }
                             }
                         </tbody>
+
                     </table>
+                    @await Html.PartialAsync("Pagination")
+
                 </div>
-                @await Html.PartialAsync("Pagination")
             </div>
         </div>
     </div>
 </div>
+
