--- a/School/WebApplication1/Views/Shared/Pagination.cshtml
+++ b/School/WebApplication1/Views/Shared/Pagination.cshtml
@@ -11,3 +11,20 @@
         </li>
     </ul>
 </nav>
+
+
+
+
+@*<div class="container">
+    @if (pager.TotalPages > 0)
+    {
+        <ul class="pagination justify-content-end">
+            @for (var pge = pager.StartPage; pge < pager.EndPage; pge++)
+            {
+                <li class="page-item @(pge == pager.CurrentPage ? "active" : "")">
+                    <a class="page-link" asp-controller="KhachHang" asp-action="Index" asp-route-pg="@pge">@pge</a>
+                </li>
+            }
+        </ul>
+    }
+</div>*@
