[UPDATE] - Thay đổi giao diện
[ADD]
- Dto: KhachHangDTO
- Table: LoaiKhachHang
- SeedData: LoaiKhachHang

--- a/School/WebApplication1/Views/KhachHang/Index.cshtml
+++ b/School/WebApplication1/Views/KhachHang/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<KhachHangModel>
+﻿@model List<StoreManagement.Dtos.KhachHangDto>
 @{
     ViewData["Title"] = "Khách hàng";
     Layout = "~/Views/Shared/_Layout.cshtml";
