--- a/School/WebApplication1/Views/Shared/_Navbar.cshtml
+++ b/School/WebApplication1/Views/Shared/_Navbar.cshtml
@@ -69,6 +69,12 @@
                 </a>
             </li>
             <li>
+                <a href="/ds-khach-hang">
+                    <i class="nc-icon nc-bank"></i>
+                    <p>Ds Khách Hàng</p>
+                </a>
+            </li>
+            <li>
                 <a href="/HangHoa">
                     <i class="nc-icon nc-bell-55"></i>
                     <p>Hàng hóa</p>
@@ -88,17 +94,17 @@
                 </a>
             </li>
             @*<li>
-                    <a href="./typography.html">
-                        <i class="nc-icon nc-caps-small"></i>
-                        <p>Typography</p>
-                    </a>
-                </li>
-                <li class="active-pro">
-                    <a href="./upgrade.html">
-                        <i class="nc-icon nc-spaceship"></i>
-                        <p>Haha Hihi Hoho</p>
-                    </a>
-                </li>*@
+            <a href="./typography.html">
+                <i class="nc-icon nc-caps-small"></i>
+                <p>Typography</p>
+            </a>
+        </li>
+        <li class="active-pro">
+            <a href="./upgrade.html">
+                <i class="nc-icon nc-spaceship"></i>
+                <p>Haha Hihi Hoho</p>
+            </a>
+        </li>*@
         </ul>
     </div>
 </div>
