--- a/School/WebApplication1/Views/Shared/Pagination.cshtml
+++ b/School/WebApplication1/Views/Shared/Pagination.cshtml
@@ -1,4 +1,4 @@
-﻿<nav aria-label="Page navigation example" style="margin-top: 10px;">
+﻿<nav aria-label="Page navigation example" style="margin-top: 0;">
     <ul class="pagination justify-content-end">
         <li class="page-item disabled">
             <a class="page-link" href="#" tabindex="-1">Previous</a>
